# ganttinator

./: .gitignore  README.md  pyproject.toml
ganttinator/: config.py  consts.py  generate.py  main.py  task.py  utils.py
