[project]
name = "ganttinator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
